Added service and displaying of the posts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-posts-page></app-posts-page>
+<app-header></app-header>
+<div>
+  <app-posts-page></app-posts-page>
+</div>
+<!-- <app-footer></app-footer> -->
