--- a/src/app/components/post-create/post-create.component.html
+++ b/src/app/components/post-create/post-create.component.html
@@ -1,9 +1,25 @@
 <mat-card>
-  <mat-form-field>
-    <textarea matInput rows="5" [(ngModel)]="enteredValue"></textarea>
-  </mat-form-field>
-  <button mat-raised-button
-          color="primary"
-          (click)="onAddPost()">Save post</button>
+  <form [formGroup]="postForm">
+    <mat-form-field>
+      <input matInput
+             type="text"
+             name="title"
+             formControlName="title">
+    </mat-form-field>
+
+    <mat-form-field>
+      <textarea matInput
+                rows="5"
+                name="content"
+                formControlName="content">
+      </textarea>
+    </mat-form-field>
+
+    <button mat-raised-button
+            color="primary"
+            (click)="onAddPost()"
+            [disabled]="!isFormValid()">
+      Save post
+    </button>
+  </form>
 </mat-card>
-<p>{{ newPost }}</p>
