Added Node, MongoDB and get, post requests

--- a/src/app/components/post-create/post-create.component.html
+++ b/src/app/components/post-create/post-create.component.html
@@ -4,6 +4,7 @@
       <input matInput
              type="text"
              name="title"
+             placeholder="Title *"
              formControlName="title">
     </mat-form-field>
 
@@ -11,6 +12,7 @@
       <textarea matInput
                 rows="5"
                 name="content"
+                placeholder="Content *"
                 formControlName="content">
       </textarea>
     </mat-form-field>
