--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div>
-  <app-posts-page></app-posts-page>
-</div>
+<main>
+  <router-outlet></router-outlet>
+</main>
 <!-- <app-footer></app-footer> -->
