--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,9 @@
-<mat-toolbar color="primary">MyPosts</mat-toolbar>
+<mat-toolbar color="primary">
+  <span>
+    <a class="site-header" href="/">MyPosts</a>
+  </span>
+  <span class="spacer"></span>
+  <span>
+    <a mat-button href="/create">Create post</a>
+  </span>
+</mat-toolbar>
