Some visual and logic  improvements

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,13 @@
 .site-header {
+  font-family: 'baloopaaji';
   font-size: 1.5em;
   text-decoration: none;
   color: white;
+}
+
+.mat-button {
+  font-family: 'montserrat';
+  font-weight: bold;
 }
 
 .spacer {
