--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -11,5 +11,7 @@
   </mat-expansion-panel>
 </mat-accordion>
 <ng-template #noPosts>
-  No posts added!
+  <div class="no-posts">
+    No posts added!
+  </div>
 </ng-template>
