--- a/src/app/components/post-list/post-list.component.scss
+++ b/src/app/components/post-list/post-list.component.scss
@@ -6,3 +6,9 @@ mat-accordion {
 mat-expansion-panel {
   margin: 10px 0;
 }
+
+.no-posts {
+  margin: 30px auto;
+  font-weight: bold;
+  text-align: center;
+}
