--- a/src/app/components/posts-page/posts-page.component.html
+++ b/src/app/components/posts-page/posts-page.component.html
@@ -1,1 +1,2 @@
-<app-post-list [posts]="posts" (deletePost)="onDeletePost($event)"></app-post-list>
+<app-post-list *ngIf="posts.length" [posts]="posts" (deletePost)="onDeletePost($event)"></app-post-list>
+<app-loader *ngIf="!posts.length"></app-loader>
